Fix fdo#51943 - prevent lose focus event to close popup.

This is a follow-up bandaid for fdo#48096 side-effects, which in
turn was a band-aid for side-effects caused by ooo-build's
toolbar-decorations-svx.diff.

Fix instructs vcl to not auto-close the floater on losefocus events,
which at least on OSX comes _before_ we even see the mouse button
down event.

Change-Id: I21896c4169addffdf2af920a37e0e3786438cc4e
Signed-off-by: Thorsten Behrens <tbehrens@suse.com>