svx/source/tbxctrls/tbcontrl.cxx
@@ -2127,7 +2127,7 @@ SfxPopupWindow* SvxFontColorToolBoxControl::CreatePopupWindow()
                 mLastColor);
 
     pColorWin->StartPopupMode( &GetToolBox(),
-        FLOATWIN_POPUPMODE_GRABFOCUS|FLOATWIN_POPUPMODE_ALLOWTEAROFF );
+        FLOATWIN_POPUPMODE_GRABFOCUS|FLOATWIN_POPUPMODE_ALLOWTEAROFF|FLOATWIN_POPUPMODE_NOAPPFOCUSCLOSE );
     pColorWin->StartSelection();
     SetPopupWindow( pColorWin );
     return pColorWin;
@@ -2203,7 +2203,7 @@ SfxPopupWindow* SvxColorToolBoxControl::CreatePopupWindow()
                                     mLastColor);
 
     pColorWin->StartPopupMode( &GetToolBox(),
-        FLOATWIN_POPUPMODE_GRABFOCUS|FLOATWIN_POPUPMODE_ALLOWTEAROFF );
+        FLOATWIN_POPUPMODE_GRABFOCUS|FLOATWIN_POPUPMODE_ALLOWTEAROFF|FLOATWIN_POPUPMODE_NOAPPFOCUSCLOSE );
     pColorWin->StartSelection();
     SetPopupWindow( pColorWin );
     return pColorWin;
@@ -2331,7 +2331,7 @@ SfxPopupWindow* SvxColorExtToolBoxControl::CreatePopupWindow()
     }
 
     pColorWin->StartPopupMode( &GetToolBox(),
-        FLOATWIN_POPUPMODE_GRABFOCUS|FLOATWIN_POPUPMODE_ALLOWTEAROFF );
+        FLOATWIN_POPUPMODE_GRABFOCUS|FLOATWIN_POPUPMODE_ALLOWTEAROFF|FLOATWIN_POPUPMODE_NOAPPFOCUSCLOSE );
     pColorWin->StartSelection();
     SetPopupWindow( pColorWin );
     bChoiceFromPalette = sal_True;
@@ -2459,7 +2459,10 @@ SfxPopupWindow* SvxFrameToolBoxControl::CreatePopupWindow()
     SvxFrameWindow_Impl* pFrameWin = new SvxFrameWindow_Impl(
                                         GetSlotId(), m_xFrame, &GetToolBox() );
 
-    pFrameWin->StartPopupMode( &GetToolBox(), FLOATWIN_POPUPMODE_GRABFOCUS | FLOATWIN_POPUPMODE_ALLOWTEAROFF );
+    pFrameWin->StartPopupMode( &GetToolBox(),
+                               FLOATWIN_POPUPMODE_GRABFOCUS |
+                               FLOATWIN_POPUPMODE_ALLOWTEAROFF |
+                               FLOATWIN_POPUPMODE_NOAPPFOCUSCLOSE );
     pFrameWin->StartSelection();
     SetPopupWindow( pFrameWin );
 
@@ -2508,7 +2511,10 @@ SfxPopupWindowType SvxFrameLineStyleToolBoxControl::GetPopupWindowType() const
 SfxPopupWindow* SvxFrameLineStyleToolBoxControl::CreatePopupWindow()
 {
     SvxLineWindow_Impl* pLineWin = new SvxLineWindow_Impl( GetSlotId(), m_xFrame, &GetToolBox() );
-    pLineWin->StartPopupMode( &GetToolBox(), FLOATWIN_POPUPMODE_GRABFOCUS | FLOATWIN_POPUPMODE_ALLOWTEAROFF );
+    pLineWin->StartPopupMode( &GetToolBox(),
+                              FLOATWIN_POPUPMODE_GRABFOCUS |
+                              FLOATWIN_POPUPMODE_ALLOWTEAROFF |
+                              FLOATWIN_POPUPMODE_NOAPPFOCUSCLOSE );
     SetPopupWindow( pLineWin );
 
     return pLineWin;
@@ -2573,7 +2579,7 @@ SfxPopupWindow* SvxFrameLineColorToolBoxControl::CreatePopupWindow()
                                         mLastColor);
 
     pColorWin->StartPopupMode( &GetToolBox(),
-        FLOATWIN_POPUPMODE_GRABFOCUS|FLOATWIN_POPUPMODE_ALLOWTEAROFF );
+        FLOATWIN_POPUPMODE_GRABFOCUS|FLOATWIN_POPUPMODE_ALLOWTEAROFF|FLOATWIN_POPUPMODE_NOAPPFOCUSCLOSE );
     pColorWin->StartSelection();
     SetPopupWindow( pColorWin );
     return pColorWin;
